[project]
name = "python-whois"
version = "0.9.6"
description = "Whois querying and parsing of domain registration information."
authors = [
    {name = "Richard Penman", email = "richard.penman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]
license = {text = "MIT"}
keywords = ["whois", "python"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3",
]
[project.urls]
Homepage = "https://github.com/richardpenman/whois"
Repository = "https://github.com/richardpenman/whois"

[tool.poetry]
packages = [{include = "whois"}]
include = ["whois/data/*"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
